Reduce public visibility of compute-budget APIs

--- a/compute-budget/Cargo.toml
+++ b/compute-budget/Cargo.toml
@@ -20,6 +20,7 @@ solana-program-entrypoint = { workspace = true }
 [features]
 dev-context-only-utils = ["dep:qualifier_attr"]
 frozen-abi = ["dep:solana-frozen-abi", "solana-fee-structure/frozen-abi"]
+svm-internal = ["dep:qualifier_attr"]
 
 [lints]
 workspace = true
