--- a/compute-budget-instruction/Cargo.toml
+++ b/compute-budget-instruction/Cargo.toml
@@ -13,7 +13,7 @@ edition = { workspace = true }
 log = { workspace = true }
 solana-borsh = { workspace = true }
 solana-builtins-default-costs = { workspace = true, features = ["svm-internal"] }
-solana-compute-budget = { workspace = true }
+solana-compute-budget = { workspace = true, features = ["svm-internal"] }
 solana-compute-budget-interface = { workspace = true }
 solana-feature-set = { workspace = true }
 solana-instruction = { workspace = true }
