--- a/ledger-tool/Cargo.toml
+++ b/ledger-tool/Cargo.toml
@@ -40,7 +40,7 @@ solana-feature-set = { workspace = true }
 solana-geyser-plugin-manager = { workspace = true }
 solana-gossip = { workspace = true }
 solana-ledger = { workspace = true, features = ["dev-context-only-utils"] }
-solana-log-collector = { workspace = true }
+solana-log-collector = { workspace = true, features = ["dev-context-only-utils"] }
 solana-logger = { workspace = true }
 solana-measure = { workspace = true }
 solana-program-runtime = { workspace = true, features = ["metrics"] }
