--- a/log-collector/Cargo.toml
+++ b/log-collector/Cargo.toml
@@ -11,6 +11,14 @@ edition = { workspace = true }
 
 [dependencies]
 log = { workspace = true }
+qualifier_attr = { workspace = true, optional = true }
+
+[dev-dependencies]
+solana-log-collector = { path = ".", features = ["dev-context-only-utils"] }
 
 [package.metadata.docs.rs]
 targets = ["x86_64-unknown-linux-gnu"]
+
+[features]
+dev-context-only-utils = ["dep:qualifier_attr"]
+svm-internal = ["dep:qualifier_attr"]
