--- a/program-runtime/Cargo.toml
+++ b/program-runtime/Cargo.toml
@@ -35,7 +35,7 @@ solana-frozen-abi-macro = { workspace = true, optional = true, features = [
 solana-hash = { workspace = true }
 solana-instruction = { workspace = true }
 solana-last-restart-slot = { workspace = true }
-solana-log-collector = { workspace = true }
+solana-log-collector = { workspace = true, features = ["svm-internal"] }
 solana-measure = { workspace = true }
 solana-metrics = { workspace = true, optional = true }
 solana-precompiles = { workspace = true }
