--- a/program-test/Cargo.toml
+++ b/program-test/Cargo.toml
@@ -22,7 +22,7 @@ solana-banks-client = { workspace = true }
 solana-banks-interface = { workspace = true }
 solana-banks-server = { workspace = true }
 solana-bpf-loader-program = { workspace = true }
-solana-compute-budget = { workspace = true }
+solana-compute-budget = { workspace = true, features = ["dev-context-only-utils"] }
 solana-feature-set = { workspace = true }
 solana-inline-spl = { workspace = true }
 solana-instruction = { workspace = true }
